[package]
name = "rtaudio_example_rust"
version = "0.1.0"
authors = ["MajorX234 <majorx234@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rtaudio_lib"
path = "src/lib.rs"

[[bin]]
name = "gen_wave"
path = "src/gen_wave/bin/main.rs"

[[bin]]
name = "adsr_modificator"
path = "src/adsr_modificator/bin/main.rs"

[[bin]]
name = "play_wave"
path = "src/play_wave/bin/main.rs"

[[bin]]
name = "overdrive"
path = "src/overdrive/bin/main.rs"


[[bin]]
name = "delay"
path = "src/delay/bin/main.rs"

[[bin]]
name = "filter"
path = "src/filter/bin/main.rs"

[[bin]]
name = "filter_test"
path = "src/filter/bin/filter_test.rs"


[dependencies]
rodio = "0.14.0"
scan_fmt = "0.2.6"
dsp = "0.10.2"
